@@ -1,3 +1,7 @@
+iotsa 2.5 - development
+
+- Start of a development branch with odd version numbers
+
 iotsa 2.4.1 - 23-Apr-2020
 
 - Version number reported was wrong. Fixed.
